Opened 11 years ago
Closed 11 years ago
#10370 closed bug (fixed)
[translators/psd] PSDLoader.cpp: Mismatching allocation and deallocation
Reported by: | mt | Owned by: | 3dEyes |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Add-Ons/Translators/PSD | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
In PSDLoader::Decode(), variable fStreamBuffer is allocated by new[], but deallocated by delete. Please see attached report.
Attachments (3)
Change History (7)
by , 11 years ago
Attachment: | 0001-Fix-mismatching-allocation-and-deallocation.patch added |
---|
comment:1 by , 11 years ago
patch: | 0 → 1 |
---|
comment:2 by , 11 years ago
More new[]/delete mismatching for variable lineData and colorData (both pointed by cppcheck) and imageData is added.
comment:3 by , 11 years ago
Component: | Add-Ons/Translators → Add-Ons/Translators/PSD |
---|---|
Keywords: | PSDTranslator removed |
Owner: | changed from | to
comment:4 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Patch