PSDTranslator: Fix array deletions. Fix #10370, CID 1162765